--- a/package.json
+++ b/package.json
@@ -1,22 +1,57 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "name": "plone-manager",
+  "version": "0.0.0",
+  "license": "MIT",
+  "angular-cli": {},
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor",
+    "electron": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "private": true,
+  "dependencies": {
+    "@angular/common": "~2.0.0",
+    "@angular/compiler": "~2.0.0",
+    "@angular/core": "~2.0.0",
+    "@angular/forms": "~2.0.0",
+    "@angular/http": "~2.0.0",
+    "@angular/platform-browser": "~2.0.0",
+    "@angular/platform-browser-dynamic": "~2.0.0",
+    "@angular/router": "~3.1.0",
+    "@angular/material": "v2.0.0-alpha.9-3",
+    "broccoli-merge-trees": "^1.1.4",
+    "broccoli-sass": "^0.7.0",
+    "core-js": "^2.4.1",
+    "glob": "^7.1.1",
+    "lodash": "^4.16.4",
+    "rxjs": "5.0.0-beta.12",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.6.23",
+    "jwt-decode": "^2.1.0"
+  },
   "devDependencies": {
-    "electron": "^1.4.1"
+    "@types/jasmine": "^2.2.30",
+    "@types/node": "^6.0.42",
+    "angular-cli": "1.0.0-beta.17",
+    "codelyzer": "~0.0.26",
+    "electron": "^1.4.1",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "node-sass": "^3.10.1",
+    "protractor": "4.0.9",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^4.0.2",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
+    "typescript": "2.0.2"
   }
 }
