--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23",
-    "jwt-decode": "^2.1.0"
+    "jwt-decode": "^2.1.0",
+    "angular2-schema-form": "file:./local_modules/angular2-schema-form"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
